--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   "dependencies": {
     "@types/node": "^24.10.1",
     "@types/sqlite3": "^3.1.11",
+    "readline-sync": "^1.4.10",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/readline-sync": "^1.4.8"
   }
 }
