Chore:Validação de usuário para excluir e concluir no Service

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desenvolver uma aplicação em **TypeScript** com **persistência de dados em SQLite**, aplicando os conceitos aprendidos na disciplina de *Linguagem de Programação* e seguindo **boas práticas de código**.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx index.ts"
+    "dev": "tsx src/index.ts"
   },
   "repository": {
     "type": "git",
